--- a/index-result.html
+++ b/index-result.html
@@ -87,6 +87,20 @@
             <!-- 숙련도 -->
             <section>
                 <h2 class="subtitle">Skills</h2>
+		<ul>
+                    <li>JavaScript
+                        <ul>
+                            <li>JavaScript 문법 </li>
+                            <li>JSON </li>
+                            <li>Discord.js</li>
+                        </ul>
+                    </li>
+                    <li>Python
+                        <ul>
+                            <li>파이썬 심화 문법</li>
+                        </ul>
+                    </li>
+                </ul>
 
             </section>
         </div>
