--- a/index-result.html
+++ b/index-result.html
@@ -39,7 +39,7 @@
             <div id="namecard">
                 <img src="https://media.discordapp.net/attachments/855695988245397505/867563803704033310/43b5df65e8ae1ace.png" alt="">
                 <h1>Star Light Coder</h1>
-                <p>하늘에선 별빛이 비치네<br>별빛 아래에 신성한 코드여<br>우리 Developer들을<br></p>
+                <p>하늘에선 별빛이 비치네<br>별빛 아래에 신성한 코드여<br>우리 Developer들을<br>구원하소서</p>
             </div>
             <div id="detail">
                 <p>JinJu, Korea</p>
